<resources>
    <string name="app_name">Skate World</string>

    <!--FullScreenActivity-->
    <string name="title_username">Insert your username here:</string>
    <string name="title_accept">Accept</string>
    <string name="user_duplicated">This user alreeady exists.</string>

    <!--MapsActivity-->
    <string name="title_shop">Shop</string>
    <string name="title_markers">Markers</string>
    <string name="title_news">News</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_chat">Chat</string>


    <!--SkateActivity-->
    <string name="title_submit">Submit</string>

    <!--GalleryActivity-->
    <string name="title_table0">"Tony Hawk's Table"</string>
    <string name="title_table1">"Chris Cole's Table"</string>
    <string name="title_table2">"Cody McEntire's Table"</string>
    <string name="title_table3">"Boo Johnson's Table"</string>
    <string name="title_table4">"Nyjah Huston's Table"</string>
    <string name="title_table5">"Chris Joslin's Table"</string>
    <string name="title_table6">"Sean Malto's Table"</string>
    <string name="title_table7">"Rodney Mullen's Table"</string>
    <string name="title_table8">"Alexis Sablone's Table"</string>

    <!--ChatActivity-->
    <string name="title_hint">"Add Message"</string>

    <!--CustomDialogReward -->
    <string name="title_reward_win">You Win</string>
    <string name="content_reward_win">Congratulations you have unlocked a skateboard</string>
    <string name="title_reward_lose">You Lose</string>
    <string name="content_reward_lose">Sorry, try another day</string>
</resources>
